--- a/src/css/specific/toc.css
+++ b/src/css/specific/toc.css
@@ -36,6 +36,7 @@
   &:hover {
     border-left-color: var(--steel-2);
     color: var(--steel-2);
+    font-family: var(--sans-serif-bold);
     font-weight: var(--weight-bold);
     letter-spacing: -.03em;
   }
